examples/kubernetes/plain-ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: theapp
  labels:
    app: theapp
spec:
  type: ClusterIP #even it is the default value here, it is worth noticing this ip type is enough since we are accesing through Ingress
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: theapp
